fix: improve toolbar style in dark mode

--- a/packages/libro-core/src/toolbar/index.less
+++ b/packages/libro-core/src/toolbar/index.less
@@ -4,16 +4,16 @@
 .libro-hide-selector-menu {
   .@{ant-prefix}-dropdown-menu {
     background-color: var(--mana-libro-popover-background-color);
-  }
-  .@{ant-prefix}-dropdown-menu-item {
-    color: var(--mana-libro-toolbar-menu-label-color);
-  }
-  .@{ant-prefix}-dropdown-menu-item-disabled {
-    color: var(--mana-libro-toolbar-menu-disabled-label-color) !important;
-  }
-  .@{ant-prefix}-dropdown-menu-item.@{ant-prefix}-dropdown-menu-item-disabled:hover,
-  .@{ant-prefix}-dropdown-menu-item:hover {
-    background-color: var(--mana-libro-menu-hover-color);
+    .@{ant-prefix}-dropdown-menu-item {
+      color: var(--mana-libro-toolbar-menu-label-color);
+    }
+    .@{ant-prefix}-dropdown-menu-item-disabled {
+      color: var(--mana-libro-toolbar-menu-disabled-label-color);
+    }
+    .@{ant-prefix}-dropdown-menu-item.@{ant-prefix}-dropdown-menu-item-disabled:hover,
+    .@{ant-prefix}-dropdown-menu-item:hover {
+      background-color: var(--mana-libro-menu-hover-color);
+    }
   }
 }
 
